objects/Program_Partner_Association__c.object
<CustomObject>
    <description>Junction Object for Campaign(Program) and Account(Partner).</description>
    <fields>
        <fullName>Location_ID__c</fullName>
        <formula>Partner__r.Location_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDCP_Organization_ID__c</fullName>
        <formula>Partner__r.MDCP_Organization_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MDCP Organization ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Partner Associations</relationshipLabel>
        <relationshipName>Program_Partner_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Physical_City__c</fullName>
        <formula>Partner__r.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Country__c</fullName>
        <formula>Partner__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Street__c</fullName>
        <formula>Partner__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>Associating Program and Partner select Program</description>
        <label>Program</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Program Partner Associations</relationshipLabel>
        <relationshipName>Program</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Program Partner Association</label>
    <nameField>
        <displayFormat>PA-{00000000}</displayFormat>
        <label>Program Partner Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Partner Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Program_Recordtypenamecheck</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Program__r.RecordType.Name == &apos;Partner Program&apos;,FALSE,TRUE)</errorConditionFormula>
        <errorDisplayField>Program__c</errorDisplayField>
        <errorMessage>Recordtype should be Partner Program</errorMessage>
    </validationRules>
</CustomObject>